# course_work_5_databases

./: .gitignore  README.md  main.py  pyproject.toml
data/: database.ini
src/: class_DBManager.py  config.py  utils.py
tests/: test_upload_to_database.py  test_youtube_data.py
